// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: pi/arrow > arrow type: Num -> Num 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "Π(t1: Num) -> Num",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > arrow type: Num -> Num 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "name": "Num",
            "type": "Free",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "t1",
      },
      "body": {
        "id": 1205,
        "type": "Var",
        "variable": {
          "name": "Num",
          "type": "Free",
        },
      },
      "id": 1206,
      "type": "Abs",
    },
    "type": {
      "id": 1,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: pi/arrow > output type must be a Type: (x: Num) -> x 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Num ~~ Type",
    ],
    "term": "Π(x: Num) -> x",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > output type must be a Type: (x: Num) -> x 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 28,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "name": "Num",
            "type": "Free",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "body": {
        "id": 1205,
        "type": "Var",
        "variable": {
          "index": 0,
          "type": "Bound",
        },
      },
      "id": 1206,
      "type": "Abs",
    },
    "type": {
      "id": 1,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: pi/arrow > pi explicit: (x: Num) -> Num 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "Π(x: Num) -> Num",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > pi explicit: (x: Num) -> Num 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "name": "Num",
            "type": "Free",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "body": {
        "id": 1205,
        "type": "Var",
        "variable": {
          "name": "Num",
          "type": "Free",
        },
      },
      "id": 1206,
      "type": "Abs",
    },
    "type": {
      "id": 1,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: pi/arrow > pi implicit: (x: Num) => Num 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "Π(x: Num) => Num",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > pi implicit: (x: Num) => Num 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "id": 1204,
          "type": "Var",
          "variable": {
            "name": "Num",
            "type": "Free",
          },
        },
        "icit": "Implicit",
        "type": "Pi",
        "variable": "x",
      },
      "body": {
        "id": 1205,
        "type": "Var",
        "variable": {
          "name": "Num",
          "type": "Free",
        },
      },
      "id": 1206,
      "type": "Abs",
    },
    "type": {
      "id": 1,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;
